--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/base-64": "^0.1.3",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^14.0.13",
     "base-64": "^0.1.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
